--- a/Prototype/res/layout/pag_sub_image.xml
+++ b/Prototype/res/layout/pag_sub_image.xml
@@ -13,14 +13,36 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:scaleType="fitXY" />
-    
+
     <ImageView
         android:id="@+id/clickable"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:scaleType="fitXY"
         android:visibility="invisible" />
-    
+
+    <ImageView
+        android:id="@+id/ivSmall"
+        android:layout_width="460dp"
+        android:layout_height="420dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerInParent="true"
+        android:layout_marginRight="120dp"
+        android:background="@drawable/imagebg"
+        android:scaleType="fitXY"
+        android:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/ivSmallHidden"
+        android:layout_width="460dp"
+        android:layout_height="420dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerInParent="true"
+        android:layout_marginRight="120dp"
+        android:background="@drawable/imagebg"
+        android:scaleType="fitXY"
+        android:visibility="invisible" />
+
     <TextView
         android:id="@+id/textPag1"
         style="@style/StoryBlock"
@@ -33,17 +55,6 @@
         android:background="@drawable/container_dropshadow"
         android:padding="16dp"
         android:text="@string/pag1" />
-
-    <ImageView
-        android:id="@+id/ivSmall"
-        android:layout_width="460dp"
-        android:layout_height="420dp"
-        android:layout_centerInParent="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="120dp"
-        android:background="@drawable/imagebg"
-        android:scaleType="fitXY"
-        android:visibility="visible" />
 
     <TextView
         android:id="@+id/textPag1_2"
