--- a/Prototype/res/menu/main.xml
+++ b/Prototype/res/menu/main.xml
@@ -1,14 +1,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_gui_story"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:title="@string/gui_adventures"/>
     <item
         android:id="@+id/action_build_story"
         android:orderInCategory="101"
-        android:showAsAction="always"
+        android:showAsAction="never"
         android:title="@string/action_build_story"/>
-
+    <item
+        android:id="@+id/action_read_story"
+        android:orderInCategory="102"
+        android:showAsAction="never"
+        android:title="@string/action_read_story"/>
 </menu>
