--- a/Prototype/res/layout/activity_book.xml
+++ b/Prototype/res/layout/activity_book.xml
@@ -14,8 +14,7 @@
     <FrameLayout
         android:id="@+id/detailFragment"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        class="com.dipeca.prototype.Pag1frg" >
+        android:layout_height="fill_parent" >
     </FrameLayout>
 
     <fragment
