--- a/Prototype/res/layout-xlarge/menu.xml
+++ b/Prototype/res/layout-xlarge/menu.xml
@@ -27,7 +27,7 @@
             android:id="@+id/btnIntendS"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
     </LinearLayout>
 
     <FrameLayout
@@ -69,7 +69,7 @@
 
         <TextView
             android:id="@+id/pointsValue"
-            android:layout_width="wrap_content"
+            android:layout_width="98dp"
             android:layout_height="wrap_content"
             android:fontFamily="sans"
             android:paddingLeft="2dp"
@@ -77,6 +77,7 @@
             android:textColor="#444444"
             android:textSize="20sp"
             android:textStyle="bold|italic" />
+
     </LinearLayout>
 
     <TextView
