--- a/Prototype/res/layout-xlarge/pag_help.xml
+++ b/Prototype/res/layout-xlarge/pag_help.xml
@@ -14,10 +14,10 @@
         android:orientation="vertical" >
 
         <RelativeLayout
-            android:layout_width="498dp"
-            android:layout_height="80dp"
-            android:layout_marginLeft="120dp"
-            android:layout_marginTop="8dp" >
+            android:layout_width="548dp"
+            android:layout_height="98dp"
+            android:layout_marginLeft="48dp"
+            android:layout_marginTop="12dp" >
 
             <ImageView
                 android:layout_width="fill_parent"
@@ -26,12 +26,12 @@
                 android:src="@drawable/backoldpaper" />
 
             <LinearLayout
-                android:layout_width="498dp"
+                android:layout_width="584dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
 
                 <LinearLayout
-                    android:layout_width="240dp"
+                     android:layout_width="216dp"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal" >
 
@@ -40,7 +40,8 @@
                         style="@style/ButtonText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="4dp"
+                        android:layout_margin="12dp"
+                        android:background="@drawable/button_back"
                         android:src="@drawable/ic_action_prev" />
 
                     <ImageButton
@@ -48,26 +49,27 @@
                         style="@style/ButtonText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="4dp"
+                        android:layout_margin="12dp"
+                        android:background="@drawable/button_back"
                         android:src="@drawable/ic_action_play" />
                 </LinearLayout>
 
                 <TextView
                     android:id="@+id/textPag1"
                     style="@style/StoryBlock"
-                    android:layout_width="248dp"
+                    android:layout_width="298dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
+                    android:layout_margin="12dp"
                     android:background="@drawable/container_dropshadow"
                     android:padding="16dp" />
             </LinearLayout>
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="498dp"
-            android:layout_height="108dp"
-            android:layout_marginLeft="120dp"
-            android:layout_marginTop="8dp" >
+            android:layout_width="548dp"
+            android:layout_height="156dp"
+            android:layout_marginLeft="48dp"
+            android:layout_marginTop="2dp" >
 
             <ImageView
                 android:layout_width="fill_parent"
@@ -76,14 +78,14 @@
                 android:src="@drawable/backoldpaper" />
 
             <LinearLayout
-                android:layout_width="498dp"
+                android:layout_width="548dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
 
                 <LinearLayout
-                    android:layout_width="240dp"
+                     android:layout_width="216dp"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" >
+                    android:orientation="horizontal" >
 
                     <ImageButton
                         android:id="@+id/help"
@@ -91,62 +93,73 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="12dp"
+                        android:background="@drawable/button_back"
                         android:src="@drawable/ic_action_help" />
+
+                    <ImageButton
+                        android:id="@+id/btnSocialHelp"
+                        style="@style/ButtonText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="12dp"
+                        android:background="@drawable/button_back"
+                        android:src="@drawable/ic_action_social_help" />
                 </LinearLayout>
 
                 <TextView
                     android:id="@+id/textPag2"
                     style="@style/StoryBlock"
-                    android:layout_width="248dp"
+                    android:layout_width="298dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
+                    android:layout_margin="12dp"
                     android:background="@drawable/container_dropshadow"
                     android:padding="16dp" />
             </LinearLayout>
         </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="498dp"
-            android:layout_height="348dp"
-            android:layout_marginLeft="120dp"
-            android:layout_marginTop="8dp" >
+            <RelativeLayout
+                android:layout_width="548dp"
+                android:layout_height="332dp"
+                android:layout_marginLeft="48dp"
+                android:layout_marginTop="2dp" >
 
-            <ImageView
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:scaleType="fitXY"
-                android:src="@drawable/backoldpaper" />
-
-            <LinearLayout
-                android:layout_width="498dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/backoldpaper"
-                android:orientation="horizontal" >
+                <ImageView
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/backoldpaper" />
 
                 <LinearLayout
-                    android:layout_width="240dp"
+                    android:layout_width="548dp"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" >
+                    android:background="@drawable/backoldpaper"
+                    android:orientation="horizontal" >
 
-                    <ImageView
-                        android:id="@+id/helpObjects"
-                        style="@style/ButtonText"
-                        android:layout_width="160dp"
-                        android:layout_height="320dp"
+                    <LinearLayout
+                         android:layout_width="216dp"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical" >
+
+                        <ImageView
+                            android:id="@+id/helpObjects"
+                            style="@style/ButtonText"
+                            android:layout_width="141dp"
+                            android:layout_height="match_parent"
+                            android:layout_margin="12dp"
+                            android:background="@drawable/help_objects" />
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/textPag3"
+                        style="@style/StoryBlock"
+                        android:layout_width="298dp"
+                        android:layout_height="wrap_content"
                         android:layout_margin="12dp"
-                        android:background="@drawable/help_objects" />
+                        android:background="@drawable/container_dropshadow"
+                        android:padding="16dp" />
                 </LinearLayout>
-
-                <TextView
-                    android:id="@+id/textPag3"
-                    style="@style/StoryBlock"
-                    android:layout_width="248dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
-                    android:background="@drawable/container_dropshadow"
-                    android:padding="16dp" />
-            </LinearLayout>
-        </RelativeLayout>
+            </RelativeLayout>
     </LinearLayout>
 
     <RelativeLayout
