--- a/Prototype/res/layout/pag_help.xml
+++ b/Prototype/res/layout/pag_help.xml
@@ -14,9 +14,9 @@
         android:orientation="vertical" >
 
         <RelativeLayout
-            android:layout_width="520dp"
+            android:layout_width="504dp"
             android:layout_height="60dp"
-            android:layout_marginLeft="160dp"
+            android:layout_marginLeft="48dp"
             android:layout_marginTop="2dp" >
 
             <ImageView
@@ -26,7 +26,7 @@
                 android:src="@drawable/backoldpaper" />
 
             <LinearLayout
-                android:layout_width="520dp"
+                android:layout_width="504dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
 
@@ -41,6 +41,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="4dp"
+                        android:background="@drawable/button_back"
                         android:src="@drawable/ic_action_prev" />
 
                     <ImageButton
@@ -49,6 +50,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="4dp"
+                        android:background="@drawable/button_back"
                         android:src="@drawable/ic_action_play" />
                 </LinearLayout>
 
@@ -64,9 +66,9 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="520dp"
-            android:layout_height="68dp"
-            android:layout_marginLeft="160dp"
+            android:layout_width="504dp"
+            android:layout_height="144dp"
+            android:layout_marginLeft="48dp"
             android:layout_marginTop="2dp" >
 
             <ImageView
@@ -76,22 +78,32 @@
                 android:src="@drawable/backoldpaper" />
 
             <LinearLayout
-                android:layout_width="520dp"
+                android:layout_width="504dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
 
                 <LinearLayout
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical" >
+                    android:orientation="horizontal" >
 
                     <ImageButton
                         android:id="@+id/help"
                         style="@style/ButtonText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="12dp"
+                        android:layout_margin="4dp"
+                        android:background="@drawable/button_back"
                         android:src="@drawable/ic_action_help" />
+
+                    <ImageButton
+                        android:id="@+id/btnSocialHelp"
+                        style="@style/ButtonText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="4dp"
+                        android:background="@drawable/button_back"
+                        android:src="@drawable/ic_action_social_help" />
                 </LinearLayout>
 
                 <TextView
@@ -106,9 +118,9 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="520dp"
-            android:layout_height="348dp"
-            android:layout_marginLeft="160dp"
+            android:layout_width="504dp"
+            android:layout_height="298dp"
+            android:layout_marginLeft="48dp"
             android:layout_marginTop="2dp" >
 
             <ImageView
@@ -118,21 +130,21 @@
                 android:src="@drawable/backoldpaper" />
 
             <LinearLayout
-                android:layout_width="520dp"
+                android:layout_width="504dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/backoldpaper"
                 android:orientation="horizontal" >
 
                 <LinearLayout
-                    android:layout_width="200dp"
+                    android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical" >
 
                     <ImageView
                         android:id="@+id/helpObjects"
                         style="@style/ButtonText"
-                        android:layout_width="160dp"
-                        android:layout_height="320dp"
+                        android:layout_width="120dp"
+                        android:layout_height="260dp"
                         android:layout_margin="4dp"
                         android:background="@drawable/help_objects" />
                 </LinearLayout>
